[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://BigProgress.jpg" type="Texture2D" id=2]
[ext_resource path="res://BigUnder.jpg" type="Texture2D" id=3]
[ext_resource path="res://MainScene.gd" type="Script" id=4]
[ext_resource path="res://CustomerMenu.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
offset_top = -1.0
offset_right = 1030.0
offset_bottom = 610.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeaCup" type="Sprite2D" parent="."]
position = Vector2( 481.396, 498.944 )
texture = ExtResource( 1 )

[node name="PresentButton" type="Button" parent="."]
offset_left = 426.449
offset_top = 542.0
offset_right = 534.449
offset_bottom = 574.0
text = "View Customer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetIndicator" type="TextureProgressBar" parent="."]
offset_left = 294.165
offset_top = 413.034
offset_right = 324.165
offset_bottom = 533.034
max_value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetImage" type="Sprite2D" parent="."]
position = Vector2( 308.385, 558.825 )
scale = Vector2( 0.53125, 0.453125 )
texture = ExtResource( 1 )

[node name="SourIndicator" type="TextureProgressBar" parent="."]
offset_left = 359.82
offset_top = 413.62
offset_right = 389.82
offset_bottom = 533.62
max_value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourImage" type="Sprite2D" parent="."]
position = Vector2( 373.741, 559.988 )
scale = Vector2( 0.484375, 0.484375 )
texture = ExtResource( 1 )

[node name="SavoryIndicator" type="TextureProgressBar" parent="."]
offset_left = 568.938
offset_top = 411.459
offset_right = 598.938
offset_bottom = 531.459
max_value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavoryImage" type="Sprite2D" parent="."]
position = Vector2( 584.524, 557.493 )
scale = Vector2( 0.484375, 0.484375 )
texture = ExtResource( 1 )

[node name="CaffieneIndicator" type="TextureProgressBar" parent="."]
offset_left = 622.539
offset_top = 411.96
offset_right = 652.539
offset_bottom = 531.96
max_value = 30.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaffieneImage" type="Sprite2D" parent="."]
position = Vector2( 639.791, 557.744 )
scale = Vector2( 0.515626, 0.453125 )
texture = ExtResource( 1 )

[node name="SugarsSlider" type="HSlider" parent="."]
offset_left = 119.563
offset_top = 338.947
offset_right = 208.563
offset_bottom = 381.947
max_value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SugarsValues" type="Label" parent="."]
offset_left = 123.062
offset_top = 377.502
offset_right = 215.062
offset_bottom = 396.502
text = "0       1       2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SugarsLabel" type="Label" parent="."]
offset_left = 145.084
offset_top = 329.01
offset_right = 186.084
offset_bottom = 343.01
text = "Sugars"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMilk" type="CheckBox" parent="."]
offset_left = 300.215
offset_top = 338.04
offset_right = 384.215
offset_bottom = 374.04
text = "Add Milk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddCream" type="CheckBox" parent="."]
offset_left = 563.023
offset_top = 336.462
offset_right = 661.023
offset_bottom = 377.462
text = "Add Cream"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepTimeSlider" type="HSlider" parent="."]
offset_left = 767.029
offset_top = 324.072
offset_right = 931.029
offset_bottom = 377.072
min_value = 2.0
max_value = 5.0
value = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepTimeLabel" type="Label" parent="."]
offset_left = 810.085
offset_top = 316.026
offset_right = 912.085
offset_bottom = 341.026
text = "Steep Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteepTimeValues" type="Label" parent="."]
offset_left = 770.502
offset_top = 372.508
offset_right = 936.502
offset_bottom = 386.508
text = "2           3          4           5"

[node name="RemoveLastIngredient" type="Button" parent="."]
offset_left = 776.841
offset_top = 489.301
offset_right = 940.841
offset_bottom = 525.301
text = "Remove Last Ingredient"

[node name="NumberOfIngredients" type="Label" parent="."]
offset_left = 78.8572
offset_top = 482.409
offset_right = 194.857
offset_bottom = 504.409
text = "Ingredients: 0/5"

[node name="CustomerMenu" parent="." instance=ExtResource( 5 )]
offset_left = 62.3681
offset_top = 717.894
offset_right = 62.3682
offset_bottom = 717.894

[node name="TeaCupSweetAmount" type="Label" parent="."]
offset_left = 293.0
offset_top = 388.0
offset_right = 323.0
offset_bottom = 402.0
grow_horizontal = 2
text = "0/30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeaCupSourAmount" type="Label" parent="."]
offset_left = 361.334
offset_top = 387.331
offset_right = 390.334
offset_bottom = 401.331
grow_horizontal = 2
text = "0/30"

[node name="TeaCupSavoryAmount" type="Label" parent="."]
offset_left = 570.0
offset_top = 387.0
offset_right = 598.0
offset_bottom = 403.0
grow_horizontal = 2
text = "0/30"

[node name="TeaCupCaffieneAmount" type="Label" parent="."]
offset_left = 623.0
offset_top = 387.0
offset_right = 652.0
offset_bottom = 401.0
grow_horizontal = 2
text = "0/30"
[connection signal="pressed" from="PresentButton" to="." method="_on_PresentButton_pressed"]
[connection signal="value_changed" from="SugarsSlider" to="." method="_on_SugarsSlider_value_changed"]
[connection signal="pressed" from="AddMilk" to="." method="_on_AddMilk_pressed"]
[connection signal="pressed" from="AddCream" to="." method="_on_AddCream_pressed"]
[connection signal="value_changed" from="SteepTimeSlider" to="." method="_on_SteepTimeSlider_value_changed"]
[connection signal="pressed" from="RemoveLastIngredient" to="." method="_on_RemoveLastIngredient_pressed"]
